--- a/inst/app/md/presentation.html
+++ b/inst/app/md/presentation.html
@@ -700,7 +700,7 @@ function toggle_visibility(id1) {
 
 
 <h1 class="title toc-ignore">Introduction to MagellanNTK</h1>
-<h4 class="date">20 avril 2024</h4>
+<h4 class="date">21 avril 2024</h4>
 
 </div>
 
@@ -711,8 +711,13 @@ function toggle_visibility(id1) {
 </div>
 <div id="customizable-functions" class="section level1" number="2">
 <h1><span class="header-section-number">2</span> Customizable functions</h1>
+<p>The package <code>MagellanNTK</code> uses a collection of functions that come with default
+definition but can also be customizable by other devs. All these funtions are
+Shiny modules so as to facilitate their use in a standalone mode or embeded in
+<code>MagellanNTK</code> interface. These are the following:</p>
 <ul>
-<li>convert_dataset(): xxx</li>
+<li>convert_dataset(): A Shiny module to convert any dataset to a format suitable
+for the pipeline used.</li>
 <li>open_dataset(): xxx</li>
 <li>open_demoDataset(): xxx</li>
 <li>view_dataset(): xxx</li>
